This is the updated solution of the problem "List Utilities".